--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,19 +34,19 @@ jobs:
             dist/*.tar.gz
             dist/*.conda
 
-      - name: Publish conda and PyPI packages
-        run: |
-          # Publish to Anaconda.org
-          pixi run publish-conda
+            # - name: Publish conda and PyPI packages
+            #   run: |
+            #     # Publish to Anaconda.org
+            #     # pixi run publish-conda
 
-          # Publish to PyPI (uncomment for actual release)
-          # pixi run publish-pypi
+            #     # Publish to PyPI (uncomment for actual release)
+            #     # pixi run publish-pypi
 
-          # Publish to Test PyPI (comment out for actual release)
-          pixi run publish-test-pypi
-        env:
-          ANACONDA_API_KEY: ${{ secrets.ANACONDA_API_KEY }}
-          UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
+            #     # Publish to Test PyPI (comment out for actual release)
+            #     # pixi run publish-test-pypi
+            #   env:
+            #     ANACONDA_API_KEY: ${{ secrets.ANACONDA_API_KEY }}
+            #     UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
 
   release:
     needs: publish
